web-infras/parser/tests/fixtures/babel/es2015/generators/invalid-sloppy-function/output.txt
[SyntaxError]: Generator functions can only be declared at the top level or inside a block. (1,11)
1|while (1) function *foo() {}
 |         ^
[SyntaxError]: In non-strict mode code, functions can only be declared at top level, inside a block, or as the body of an if statement. (1,11)
1|while (1) function *foo() {}
 |         ^
